# ventil

./: Cargo.toml  LICENSE  README.md  generate_entities.sh
planning/: assumptions.txt  system.txt  systems.txt
src/: backend.rs  commands.rs  main.rs
src/db/: database.rs  mod.rs  tests.rs
src/db/entities/: item.rs  mod.rs  owner.rs  possession.rs  prelude.rs
src/db/migrator/: m_20250314_000001_create_owner_table.rs  m_20250314_000002_create_item_table.rs  m_20250315_000001_create_possesion_table.rs  mod.rs
src/migrator/: m_20250314_000001_create_user_table.rs  m_20250314_000002_create_item_table.rs  mod.rs
src/serv/: mod.rs  serv_main.rs
src/serve/: mod.rs  serve_main.rs
src/serve/item/: routes.rs
src/serve/owner/: routes.rs
src/serve/possession/: routes.rs
src/serve/trade/: logic.rs  mod.rs  routes.rs
