[package]
name = "ventil"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.44.1"
rocket = {version = "0.5.1", features = ["json", "uuid", "serde_json"]}
sea-orm = { version = "1.1.7", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "1.1"

utoipa = { version = "5", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["rocket"] }